--- a/Example/RestExample.csproj
+++ b/Example/RestExample.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+    <PackageReference Include="SystemTextJsonPatch" Version="0.0.7" />
   </ItemGroup>
 
   <ItemGroup>
