--- a/SetupTestData/SetupTestData.csproj
+++ b/SetupTestData/SetupTestData.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Example\RestExample.csproj" />
+    <ProjectReference Include="..\RestApi\RestApi.csproj" />
   </ItemGroup>
 
 </Project>
