Issue JWT for testing.

--- a/RestApi/appsettings.json
+++ b/RestApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
+    "SecretKey": "debug-only-change-this-or-else",
+    "ExpiresMinutes": 3600
+  }
 }
