Turn on JWT based Auth.

--- a/RestApi/appsettings.json
+++ b/RestApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "http://localhost",
-    "Audience": "http://localhost",
+    "Issuer": "https://localhost:7222",
+    "Audience": "https://localhost:7222",
     "SecretKey": "debug-only-change-this-or-else",
     "ExpiresMinutes": 3600
   }
